# skillgene

./: .gitignore  README.en.md  README.md  pyproject.toml
scripts/: install_skillgene.sh  verify_local.sh
skillgene/: __init__.py  config.py  launcher.py  llm.py  log_color.py  prm.py  runtime_state.py  session_filter.py  session_store.py  true_replay.py
skillgene/admin/: __init__.py  users.py
skillgene/cli/: __init__.py  config_cmd.py  daemon.py  diag.py  skills_cmd.py
skillgene/config_store/: __init__.py  bridge.py  defaults.py
skillgene/integrations/: __init__.py  hermes.py
skillgene/integrations/hermes_skill/: SKILL.md  install.py  push_session.py
skillgene/integrations/hermes_skill_sync/: SKILL.md  __init__.py  install.py  sync_skills.py
skillgene/proxy/: __init__.py  attribution.py  forwarding.py  handler.py  messages.py  recording.py  routes.py  server.py  session.py  skills_admin.py  tokens.py  uploads.py  users_admin.py
skillgene/skills/: __init__.py  bundle.py  editor.py  frontmatter.py  hub.py  layout.py  manager.py  prompt.py  registry.py  render.py  stats.py
skillgene/storage/: __init__.py  base.py  local.py  viking.py
skillgene/validation/: __init__.py  store.py  worker.py
skillgene/web/: skills.html
tests/: test_hermes_session_capture.py  test_hermes_skill_sync_integration.py  test_session_filter_ingest.py  test_session_store_lifecycle.py  test_session_upload_trigger.py  test_skill_bundle_support.py  test_skill_editor_admin.py  test_true_replay_efficiency.py  test_validation_worker_replay.py  test_viking_object_store.py
web-ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web-ui/src/: App.tsx  styles.css
web-ui/src/api/: client.ts
web-ui/src/components/: common.tsx
web-ui/src/lib/: file.ts  format.ts  toast.ts
web-ui/src/views/: AuditView.tsx  CandidateReviewView.tsx  DashboardView.tsx  HealthView.tsx  ModelSettingsView.tsx  SessionFilterView.tsx  SkillsView.tsx  UsersView.tsx
(+9 files in other folders)
